:sparkles: try to determine TEXEL assembly version

--- a/notebooks/exploratory/0.1-bunop-describe-TEXEL_INIA_UY.ipynb
+++ b/notebooks/exploratory/0.1-bunop-describe-TEXEL_INIA_UY.ipynb
@@ -21,7 +21,9 @@
     "import itertools\n",
     "\n",
     "from zipfile import ZipFile\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "\n",
+    "import src.features.illumina"
    ]
   },
   {
@@ -110,6 +112,144 @@
     "with io.TextIOWrapper(handle.open(\"Texel_3_169_Final_Report.txt\"), encoding=\"utf-8\") as f:\n",
     "    for line in itertools.islice(f, 11):\n",
     "        print(line.strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "special-avatar",
+   "metadata": {},
+   "source": [
+    "Read Texel coordinates and try to detect which assembly is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "homeless-vegetable",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texel_coordinates = dict()\n",
+    "with io.TextIOWrapper(handle.open(\"TEXEL_UY.map\"), encoding=\"utf-8\") as f:\n",
+    "    for record in f:\n",
+    "        record = record.split()\n",
+    "        texel_coordinates[record[1]] = (record[0], int(record[3]))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "czech-browse",
+   "metadata": {},
+   "source": [
+    "Is texel in the old Oarv3 assembly?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "photographic-equilibrium",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chip_dir = Path(project_dir, \"data\", \"external\", \"SHE\", \"ILLUMINA\")\n",
+    "old_chip3_file = chip_dir / \"ovinesnp50_b.csv\"\n",
+    "old_chip3 = dict()\n",
+    "for record in src.features.illumina.read_snpChip(old_chip3_file):\n",
+    "    old_chip3[record.name] = (record.chr, record.mapinfo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "changed-converter",
+   "metadata": {},
+   "source": [
+    "Coordinates don't match. Some SNPs are filtered out from MAP/PED"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "elect-eligibility",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(old_chip3.keys()) == sorted(texel_coordinates.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "charitable-mattress",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51135"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(texel_coordinates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "seeing-connectivity",
+   "metadata": {},
+   "source": [
+    "Are SNPs in the same positions? is supposed to be the case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "statistical-likelihood",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s17862.1 ('Contig', 0) ('CONTIG', 0)\n",
+      "\n",
+      "N of SNPs in different positions in texel and old chip3: 1\n",
+      "\n",
+      "N of missing SNPs in texel: 3106\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "missing = 0\n",
+    "\n",
+    "for key, value in old_chip3.items():\n",
+    "    if not key in texel_coordinates:\n",
+    "        missing += 1\n",
+    "        continue\n",
+    "        \n",
+    "    if value != texel_coordinates[key]:\n",
+    "        count += 1\n",
+    "        print(key, value, texel_coordinates[key])\n",
+    "        \n",
+    "print(f\"\\nN of SNPs in different positions in texel and old chip3: {count}\")\n",
+    "print(f\"\\nN of missing SNPs in texel: {missing}\")"
    ]
   }
  ],
