:card_file_box: rename database field

--- a/notebooks/exploratory/0.6.0-bunop-describe-CREOLE_INIA_UY.ipynb
+++ b/notebooks/exploratory/0.6.0-bunop-describe-CREOLE_INIA_UY.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "handled-vegetarian",
+   "id": "deluxe-charger",
    "metadata": {},
    "source": [
     "# CREOLE_INIA_UY\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "color-cycle",
+   "id": "geographic-payday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "mechanical-methodology",
+   "id": "mechanical-paragraph",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "initial-calculator",
+   "id": "foster-utility",
    "metadata": {},
    "source": [
     "Try to inspect dataset"
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "instructional-rugby",
+   "id": "virgin-treaty",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "generous-sociology",
+   "id": "reported-allah",
    "metadata": {},
    "source": [
     "This time I don't have *map/ped* files, but two final reports"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "imposed-savings",
+   "id": "domestic-ukraine",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sixth-warrant",
+   "id": "black-button",
    "metadata": {},
    "source": [
     "Its seems that I have only 2 of total 4 files. Genotypes are described in *AB* format. How many SNPs I have for each sample?"
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "champion-regression",
+   "id": "sound-session",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspected-douglas",
+   "id": "apart-legislature",
    "metadata": {},
    "source": [
     "Is seems that in the first file we have only 49 samples. Each sample has 606006 SNPs. What about the second file?"
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "advance-houston",
+   "id": "sublime-candy",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "local-payday",
+   "id": "collected-attraction",
    "metadata": {},
    "source": [
     "Even the second file has 49 samples. Does the samples are different?"
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "gentle-blogger",
+   "id": "competent-cannon",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eligible-front",
+   "id": "logical-blend",
    "metadata": {},
    "source": [
     "I have 98 samples as described in the dataset for `CREOLE_INIA_UY.zip`. Are coordinates updated (at least for the set of SNPs in common between 50K and HD chips)?"
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "composed-gauge",
+   "id": "powerful-sally",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "instant-purse",
+   "id": "military-retailer",
    "metadata": {},
    "source": [
     "It seems to me that positions should be updated. Can I infer genotypes from this file?"
@@ -287,14 +287,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "featured-instruction",
+   "id": "logical-vanilla",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['name', 'SNP', 'Customer Strand', 'ILMN Strand', 'alleles', 'illumina_top', 'strand', 'ilmnstrand']\n",
+      "['name', 'SNP', 'Customer Strand', 'ILMN Strand', 'alleles', 'illumina_top', 'strand', 'illumina_strand']\n",
       "250506CS3900140500001_312.1: [A/G],BOT,TOP -> C/T,A/G,bottom,forward\n",
       "250506CS3900176800001_906.1: [T/C],BOT,BOT -> C/T,A/G,bottom,forward\n",
       "250506CS3900211600001_1041.1: [A/C],BOT,TOP -> G/T,A/C,bottom,forward\n",
@@ -313,19 +313,19 @@
     "    reader = csv.reader(f, delimiter=\"\\t\")\n",
     "    header = next(reader)\n",
     "    # print(header)\n",
-    "    print([\"name\", \"SNP\", \"Customer Strand\", \"ILMN Strand\", \"alleles\", \"illumina_top\", \"strand\", \"ilmnstrand\"])\n",
+    "    print([\"name\", \"SNP\", \"Customer Strand\", \"ILMN Strand\", \"alleles\", \"illumina_top\", \"strand\", \"illumina_strand\"])\n",
     "    for line in itertools.islice(reader, 10):\n",
     "        qs = VariantSheep.objects(name=line[0])\n",
     "        if qs.count() > 0:\n",
     "            variant = qs.get()\n",
     "            location = next(filter(lambda loc: loc.imported_from == \"SNPchiMp v.3\", variant.locations))\n",
-    "            print(f\"{line[0]}: {','.join(line[4:])} -> {','.join([str(location.alleles), str(location.illumina_top), str(location.strand), str(location.ilmnstrand)])}\")"
+    "            print(f\"{line[0]}: {','.join(line[4:])} -> {','.join([str(location.alleles), str(location.illumina_top), str(location.strand), str(location.illumina_strand)])}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "looking-invasion",
+   "id": "sporting-criminal",
    "metadata": {},
    "outputs": [],
    "source": []
