:truck: rename read_snpChip into read_Manifest

--- a/notebooks/exploratory/0.1.0-bunop-describe-TEXEL_INIA_UY.ipynb
+++ b/notebooks/exploratory/0.1.0-bunop-describe-TEXEL_INIA_UY.ipynb
@@ -155,7 +155,7 @@
     "chip_dir = Path(project_dir, \"data\", \"external\", \"SHE\", \"ILLUMINA\")\n",
     "old_chip3_file = chip_dir / \"ovinesnp50_b.csv\"\n",
     "old_chip3 = dict()\n",
-    "for record in src.features.illumina.read_snpChip(old_chip3_file):\n",
+    "for record in src.features.illumina.read_Manifest(old_chip3_file):\n",
     "    old_chip3[record.name] = (record.chr, record.mapinfo)"
    ]
   },
