--- a/notebooks/exploratory/0.2-bunop-about-sheep-coordinates.ipynb
+++ b/notebooks/exploratory/0.2-bunop-about-sheep-coordinates.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "old_chip3 = dict()\n",
-    "for record in src.features.illumina.read_snpChip(os.path.join(chip_dir, \"ovinesnp50_b.csv\")):\n",
+    "for record in src.features.illumina.read_Manifest(os.path.join(chip_dir, \"ovinesnp50_b.csv\")):\n",
     "    old_chip3[record.name] = (record.chr, record.mapinfo)"
    ]
   },
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "new_chip3 = dict()\n",
-    "for record in src.features.illumina.read_snpChip(os.path.join(chip_dir, \"ovinesnp50-genome-assembly-oar-v3-1.csv\")):\n",
+    "for record in src.features.illumina.read_Manifest(os.path.join(chip_dir, \"ovinesnp50-genome-assembly-oar-v3-1.csv\")):\n",
     "    new_chip3[record.name] = (record.chr, record.mapinfo)"
    ]
   },
@@ -613,7 +613,7 @@
     "    snpchimp3_code[record.snp_name] = (record.strand, record.alleles, record.alleles_a_b_top)\n",
     "    \n",
     "new_chip3_code = dict()\n",
-    "for record in src.features.illumina.read_snpChip(Path(chip_dir, \"ovinesnp50-genome-assembly-oar-v3-1.csv\")):\n",
+    "for record in src.features.illumina.read_Manifest(Path(chip_dir, \"ovinesnp50-genome-assembly-oar-v3-1.csv\")):\n",
     "    new_chip3_code[record.name] = (record.ilmnstrand, record.snp, record.sourcestrand)\n",
     "    \n",
     "for key, value in itertools.islice(new_chip3_code.items(), 20):\n",
@@ -653,7 +653,7 @@
    ],
    "source": [
     "chip4 = dict()\n",
-    "for record in src.features.illumina.read_snpChip(os.path.join(chip_dir, \"OvineSNP50_B2.csv\"), size=256):\n",
+    "for record in src.features.illumina.read_Manifest(os.path.join(chip_dir, \"OvineSNP50_B2.csv\"), size=256):\n",
     "    chip4[record.name] = (record.chr, record.mapinfo)\n",
     "print(list(chip4.keys())[:10])\n",
     "print(\"Oarv4 chip size: %s\" % len(chip4.keys()))"
