--- a/notebooks/exploratory/0.14.0-bunop-check_sheep_coordinates.ipynb
+++ b/notebooks/exploratory/0.14.0-bunop-check_sheep_coordinates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "thrown-perfume",
+   "id": "established-source",
    "metadata": {},
    "source": [
     "# Check Sheep coordinates\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "distinct-calculation",
+   "id": "democratic-trigger",
    "metadata": {},
    "source": [
     "Define some stuff before checking coordinates"
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "suited-calibration",
+   "id": "handed-presence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pleasant-yukon",
+   "id": "descending-adelaide",
    "metadata": {},
    "source": [
     "Let's define some helper functions:"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "recreational-cassette",
+   "id": "related-official",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lesser-crash",
+   "id": "narrow-opening",
    "metadata": {},
    "source": [
     "Now check provided coordinates with the coordinates stored in database:"
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "quantitative-essence",
+   "id": "fatty-prototype",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gorgeous-interference",
+   "id": "respected-speed",
    "metadata": {},
    "source": [
     "Ok, let's take some random mismatch locations, and try to get informations from ensembl:"
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "metric-setup",
+   "id": "certain-notice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indonesian-receipt",
+   "id": "dietary-bundle",
    "metadata": {},
    "source": [
     "Now re-arrange results in a `pandas.Dataframe`:"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "filled-friendly",
+   "id": "curious-queen",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "removed-dispatch",
+   "id": "graphic-maple",
+   "metadata": {},
+   "source": [
+    "For *OAR3* coordinates, provided data are more recent than smarter database. Coordinates seems to match ensembl position. Pay attention to chrom `27` which is `X` in ensembl and smarter database (`27` seems to be an output of `plink --sheep` command"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "korean-promise",
    "metadata": {},
    "source": [
     "## Working with OAR4 coordinates\n",
@@ -530,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "solar-rings",
+   "id": "dedicated-lambda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heard-steam",
+   "id": "formed-international",
    "metadata": {},
    "source": [
     "Search mismatches in *OAR4* assembly"
@@ -552,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "outstanding-manufacturer",
+   "id": "exterior-enhancement",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "wrong-performance",
+   "id": "amateur-paragraph",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ignored-simulation",
+   "id": "female-nightlife",
    "metadata": {},
    "outputs": [
     {
@@ -842,12 +850,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "realistic-breed",
+   "cell_type": "markdown",
+   "id": "simplified-sierra",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "I can't check this coordinates with ensembl, since those data aren't in ensembl. The only source of such SNPs is EVA, which unfortunately lacks of one resurce to get all results like ensembl. I could suppose that those coordinates are more recent than the coordinates I have in the smarter database"
+   ]
   }
  ],
  "metadata": {
